# sam-aws-lambda-crud

./: README.md  pyproject.toml  samconfig.toml  template.yaml
api/my_lambda/: lambda_function.py
